# meshcore-pi-lightning-detector

./: .gitignore  AGENTS.md  BUILDROOT.md  HOWTO.md  README.md  buildroot-manage.sh  config.example.toml  manage.sh  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: tests.yml
app/: __init__.py  as3935.py  config.py  gpio_interrupt.py  main.py  meshcore_client.py
tests/: test_config.py  test_main.py  test_meshcore_client.py
